Detail flow of refactored film for MVP
- RX was added replacing the Kotlin Coroutines
- Module added to dependency injection settings
- Creation of the presenter responsible for updating the View
- Test implementation for Presenter
- Test correction of the Film List flow to achieve 100% coverage

--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
     android:fitsSystemWindows="true"
-    tools:context="com.silas.themovies.ui.detail.DetailMovieActivity">
+    tools:context="com.silas.themovies.ui.detail.activity.DetailMovieActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar_layout_detail_movie"
