--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,4 +8,4 @@
     android:padding="8dp"
     android:background="@color/colorPrimaryDark"
     tools:listitem="@layout/item_movie"
-    tools:context=".ui.main.MainActivity"/>
+    tools:context=".ui.main.activity.MainActivity"/>
